--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main></main>
-    <footer class="footer">
+    <footer class="clearfix footer">
       <div class="air">
         <h4>Air</h4>
         <p>
